--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,14 @@
   .main-height {
     height: calc(100vh - 64px);
   }
+
+  ::-webkit-scrollbar {
+    width: 1px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: lightslategray;
+    height: 25vh;
+    /* background-clip: content-box; */
+  }
 }
